--- a/templates/index.html
+++ b/templates/index.html
@@ -128,9 +128,9 @@ img {margin-bottom: -8px;}
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-light-grey w3-center w3-jumbo">
   <div class="w3-section">
-    <a class="fa fa-github w3-hover-opacity" href="https://github.com/arimal199/taglit-app" style="text-decoration:none" aria-hidden="true"></a>
+    <a class="fa fa-github w3-hover-opacity" href="https://github.com/arimal199/taglit-app" style="text-decoration:none" aria-hidden="true" target=”_blank”></a>
   </div>
-  <p class="w3-medium">Powered by <i class="w3-hover-text-green">Computerization Collabs team</i></p>
+  <p class="w3-medium">Powered by <a class="w3-hover-text-green" href="https://bit.ly/cc-taglit-whatsapp" style="text-decoration:none" aria-hidden="true" target=”_blank”>Computerization Collabs team</a></p>
 </footer>
 
 <script>
